<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hololive EN Profile App</string>
    <string name="non_official_hololive_profile_app_by_asara_2022">Unofficial Hololive Profile App by Asara\n@2022</string>
    <string name="share">Share</string>
    <string name="holo_name">Hololive Name</string>
    <string name="detail">Detail</string>
    <string name="athallah_rizaldi">Athallah Rizaldi</string>
    <string name="athallahrizaldi_gmail_com">athallahrizaldi@gmail.com</string>
    <string name="about">About</string>
    <string name="name_calliope">Mori Calliope</string>
    <string name="description_calliope">
        is an English Virtual YouTuber associated with hololive, debuting as part of its English (EN) branch first generation of VTubers alongside Ninomae Ina\'nis, Takanashi Kiara, Watson Amelia and Gawr Gura.
    </string>
    <string name="basic_calliope" tools:ignore="Typos">
        <b>Original Name</b>\n
        森 カリオペ\n
        もりかりおぺ\n
        森美声 \n
        <b>Nickname(s)</b>\n
        Calli\n
        Miss Mori\n
        CallioP\n
        Dad\n
        Kawaiiope\n
        Calvin Mori (male persona)\n
        YUNG SH1N1GAM1 B01 (male rapper persona)\n
        C-Man (male persona self-nickname)\n
        <b>Debut Date</b>\n
        YouTube: 2020/09/12\n
        <b>Character Designer</b>\n
        Illustration: <a href="https://twitter.com/y_k_sme">Yukisame</a>\n
        Live2D:\n
        <a href="https://twitter.com/MegaJujube">Jujube (base)</a>\n
        <a href="https://twitter.com/FELUCCACHAN">FELUCCA (dress)</a>\n
        <b>\"Smol\" Design</b>\n
        Illustration: <a href="https://twitter.com/walfieee">Walfie</a>\n
        Live2D: <a href="https://twitter.com/haruki_saotome">Haruki Saotome</a>\n
        <b>Affiliation</b>\n
        <a href="https://virtualyoutuber.fandom.com/wiki/Hololive">hololive English</a>
    </string>
    <string name="media_calliope">
        <b>Channel</b>\n
        <a href="https://www.youtube.com/channel/UCL_qhgtOy0dy1Agp8vkySQg">YouTube</a>
        <a href="https://www.twitch.tv/moricalliope_hololiveen">Twitch</a>\n
        <b>Social Media</b>\n
        <a href="https://twitter.com/moricalliope">Twitter</a>
        <a href="https://www.tiktok.com/@moricalliope_hololiveen">TikTok</a>\n
        <b>Official Website</b>\n
        <a href="https://hololive.hololivepro.com/en/talents/mori-calliope/">hololive.hololivepro.com</a>
        <a href="https://www.universal-music.co.jp/mori-calliope/">Universal Music Japan</a>
    </string>
    <string name="personal_calliope">
        <b>Gender</b>\n
        Female\n
        <b>Age</b>\n
        No\n
        <b>Birthday</b>\n
        4 April\n
        <b>Height</b>\n
        167 cm (5\'6)\n
        <b>Zodiac Sign</b>\n
        Aries\n
        <b>Emoji</b>\n
        💀
    </string>
    <string name="name_takanashi">Takanashi Kiara</string>
    <string name="description_takanashi">
        is an English Virtual YouTuber associated with hololive, debuting as part of its English (EN) branch first generation of VTubers alongside Ninomae Ina\'nis, Watson Amelia, Mori Calliope and Gawr Gura.
    </string>
    <string name="basic_takanashi">
        <b>Original Name</b>\n
        小鳥遊キアラ\n
        たかなしきあら\n
        <b>Nickname(s)</b>\n
        Kusotori (Crappy Bird) (by Mori Calliope)\n
        Tenchou\n
        Kiwawa\n
        <b>Debut Date</b>\n
        YouTube: 2020/09/12\n
        <b>Character Designer</b>\n
        Illustration: <a href="https://twitter.com/hukeweb">hukeweb</a>\n
        Live2D:\n
        <a href="https://twitter.com/keffiy">keffiy (Current/base)</a>\n
        <a href="https://twitter.com/wonimura47041">Wonimura (dress)</a>\n
        3D Model: <a href="https://twitter.com/KarakuriPower">KarakuriPower</a>\n
        <b>\"Smol\" Design</b>\n
        Illustration: <a href="https://twitter.com/walfieee">Walfie</a>\n
        Live2D: <a href="https://virtualyoutuber.fandom.com/wiki/Ilie_Tou">Ilie Tou</a>\n
        <b>Affiliation</b>\n
        <a href="https://virtualyoutuber.fandom.com/wiki/Hololive">hololive English</a>
    </string>
    <string name="media_takanashi">
        <b>Channel</b>\n
        <a href="https://www.youtube.com/channel/UCHsx4Hqa-1ORjQTh9TYDhww">YouTube</a>\n
        <a href="https://www.youtube.com/channel/UCq4ky2drohLT7W0DmDEw1dQ">Secondary Channel</a>\n
        <b>Social Media</b>\n
        <a href="https://twitter.com/takanashikiara">Twitter</a>\n
        <b>Official Website</b>\n
        <a href="https://hololive.hololivepro.com/en/talents/takanashi-kiara/">hololive.hololivepro.com</a>
    </string>
    <string name="personal_takanashi">
        <b>Gender</b>\n
        Female\n
        <b>Age</b>\n
        Eternal\n
        <b>Birthday</b>\n
        6 July\n
        <b>Height</b>\n
        165 cm (5\'5)\n
        <b>Zodiac Sign</b>\n
        Cancer\n
        <b>Emoji</b>\n
        🐔
    </string>
    <string name="name_ninomae">Ninomae Ina\'nis</string>
    <string name="description_ninomae">
        is an English Virtual YouTuber associated with hololive, debuting as part of its English (EN) branch first generation of VTubers alongside Ninomae Ina\'nis, Watson Amelia, Mori Calliope and Gawr Gura.
    </string>
    <string name="basic_ninomae">
        <b>Original Name</b>\n
        一伊那尓栖/にのまえいなにす\n
        <b>Nickname(s)</b>\n
        Ina\n
        TAKO\n
        <b>Debut Date</b>\n
        YouTube: 2020/09/13\n
        <b>Character Designer</b>\n
        Illustration: <a href="https://twitter.com/kuroboshi">Kuroboshi Kouhaku</a>\n
        Live2D:\n
        <a href="https://twitter.com/rariemonn765">rariemonn (Original/Base)</a>\n
        <a href="https://twitter.com/MegaJujube">Jujube (Second Costume)</a>\n
        <a href="https://twitter.com/BrianTsuii">Brian Tsui (Third costume)</a>\n
        <b>\"Smol\" Design</b>\n
        Illustration: <a href="https://twitter.com/walfieee">Walfie</a>\n
        Live2D: <a href="https://twitter.com/haruki_saotome">Haruki Saotome</a>\n
        <b>Affiliation</b>\n
        <a href="https://virtualyoutuber.fandom.com/wiki/Hololive">hololive English</a>
    </string>
    <string name="media_ninomae">
        <b>Channel</b>\n
        <a href="https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg">YouTube</a>\n
        <b>Social Media</b>\n
        <a href="https://twitter.com/ninomaeinanis">Twitter</a>\n
        <b>Official Website</b>\n
        <a href="https://hololive.hololivepro.com/en/talents/ninomae-inanis/">hololive.hololivepro.com</a>
    </string>
    <string name="personal_ninomae">
        <b>Gender</b>\n
        Female\n
        <b>Age</b>\n
        ████ (somebody spilled ink on the page!!)\n
        <b>Birthday</b>\n
        20 May\n
        <b>Height</b>\n
        157 cm (5\'2) [with shoes](5\'5)\n
        <b>Zodiac Sign</b>\n
        Taurus\n
        <b>Emoji</b>\n
        🐙
    </string>
    <string name="name_gawr">Takanashi Kiara</string>
    <string name="description_gawr">
        is an English Virtual YouTuber associated with hololive, debuting as part of its English (EN) branch first generation of VTubers alongside Ninomae Ina\'nis, Watson Amelia, Mori Calliope and Gawr Gura.\nGura is currently the most subscribed VTuber worldwide, taking the #1 spot from industry pioneer Kizuna AI in 2021. As of August 2022, Gura has over 4 million YouTube subscribers.
    </string>
    <string name="basic_gawr">
        <b>Original Name</b>\n
        がうる・ぐら\n
        <b>Nickname(s)</b>\n
        Same-chan\n
        Apex Predator\n
        City Pop Shark\n
        Samegaki\n
        Goomba\n
        <b>Debut Date</b>\n
        YouTube: 2020/09/13\n
        <b>Character Designer</b>\n
        Illustration: <a href="https://virtualyoutuber.fandom.com/wiki/Nachoneko">Amashiro Natsuki</a>\n
        Live2D:\n
        <a href="https://twitter.com/Shin_umiushi_o">Shin Umiushi (Original)</a>\n
        <a href="https://twitter.com/BrianTsuii">BrianTsuii (Third Costume/New year)</a>\n
        <b>\"Smol\" Design</b>\n
        Illustration: <a href="https://twitter.com/walfieee">Walfie</a>\n
        Live2D: <a href="https://virtualyoutuber.fandom.com/wiki/Ilie_Tou">Ilie Tou</a>\n
        <b>Affiliation</b>\n
        <a href="https://virtualyoutuber.fandom.com/wiki/Hololive">hololive English</a>
    </string>
    <string name="media_gawr">
        <b>Channel</b>\n
        <a href="https://www.youtube.com/channel/UCoSrY_IQQVpmIRZ9Xf-y93g">YouTube</a>\n
        <b>Social Media</b>\n
        <a href="https://twitter.com/gawrgura">Twitter</a>\n
        <a href="https://www.tiktok.com/@gawrgura_holoen">TikTok</a>\n
        <b>Official Website</b>\n
        <a href="https://hololive.hololivepro.com/en/talents/gawr-gura">hololive.hololivepro.com</a>
    </string>
    <string name="personal_gawr">
        <b>Gender</b>\n
        Female\n
        <b>Age</b>\n
        between 9,000 and 10,000 years old (has forgotten exact number after ~5,000 years)\n
        <b>Birthday</b>\n
        20 June\n
        <b>Height</b>\n
        141 cm(5\'5)\n
        <b>Zodiac Sign</b>\n
        Gemini\n
        <b>Emoji</b>\n
        🔱
    </string>
    <string name="name_watson">Watson Amelia</string>
    <string name="description_watson">
        is an English Virtual YouTuber associated with hololive, debuting as part of its English (EN) branch first generation of VTubers alongside Ninomae Ina\'nis, Watson Amelia, Mori Calliope and Gawr Gura.
    </string>
    <string name="basic_watson">
        <b>Original Name</b>\n
        ワトソン・アメリア\n
        <b>Nickname(s)</b>\n
        Ame\n
        Amechan\n
        Ground Pounder\n
        Gremlin Ame\n
        Armando Watson (male persona)\n
        <b>Debut Date</b>\n
        YouTube: 2020/09/13\n
        <b>Character Designer</b>\n
        Illustration: <a href="https://virtualyoutuber.fandom.com/wiki/Aoi_Nabi">Aoi Nabi</a>\n
        Live2D:\n
        <a href="https://twitter.com/7name_">Naname (Current/base)</a>\n
        <a href="https://twitter.com/FELUCCACHAN">FELUCCA (Dress)</a>\n
        <b>\"Smol\" Design</b>\n
        Illustration: <a href="https://twitter.com/walfieee">Walfie</a>\n
        Live2D: <a href="https://twitter.com/haruki_saotome">Haruki Saotome</a>\n
        VR Model:\n
        <a href="https://steamcommunity.com/id/tcbtck">CURRY</a>\n
        <a href="https://twitter.com/SeafoamBoi">SeafoamBoy (2nd VR Model)</a>\n
        <a href="https://twitter.com/Hasksoft">Hask (Bee Model &#38; Buff Model)</a>\n
        <a href="https://twitter.com/Twilight_3D">Twilight_3D (Armando Watson)</a>\n
        <b>Affiliation</b>\n
        <a href="https://virtualyoutuber.fandom.com/wiki/Hololive">hololive English</a>
    </string>
    <string name="media_watson">
        <b>Channel</b>\n
        <a href="https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg">YouTube</a>\n
        <a href="http://www.twitch.tv/watsonamelia_hololiveen?sr=a">Twitch</a>\n
        <a href="https://www.tiktok.com/@watsonamelia_holoen">TikTok</a>\n
        <a href="http://www.twitch.tv/bubb4bot?sr=a">Twitch (bubb4bot)</a>\n
        <b>Social Media</b>\n
        <a href="https://twitter.com/watsonameliaEN">Twitter</a>\n
        <b>Official Website</b>\n
        <a href="https://hololive.hololivepro.com/en/talents/watson-amelia">hololive.hololivepro.com</a>
    </string>
    <string name="personal_watson">
        <b>Gender</b>\n
        Female\n
        <b>Age</b>\n
        /-\n
        <b>Birthday</b>\n
        6 January\n
        <b>Height</b>\n
        150 cm (4\'11)\n
        <b>Zodiac Sign</b>\n
        Capricorn\n
        <b>Emoji</b>\n
        🔎
    </string>
    <string name="hololive_profile_picture">Hololive Profile Picture</string>
    <string name="description">Description</string>
    <string name="basicdetail">BasicDetail</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="media">Media</string>
</resources>