<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgProfilePicture"
                android:layout_width="250sp"
                android:layout_height="250sp"
                android:contentDescription="@string/hololive_profile_picture"
                android:paddingHorizontal="10sp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgProfilePicture"
                android:paddingHorizontal="10sp"
                android:paddingTop="20sp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingVertical="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/txtBasicDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basicdetail"
                android:textAlignment="center"
                android:textSize="12sp"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:background="@drawable/outline_back"/>

            <TextView
                android:id="@+id/txtPersonalDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_detail"
                android:textAlignment="center"
                android:textSize="12sp"
                android:paddingStart="10sp"
                android:paddingEnd="0sp"
                android:background="@drawable/outline_back"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/txtMediaDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textAlignment="center"
            android:textSize="12sp"
            android:background="@drawable/outline_back"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/non_official_hololive_profile_app_by_asara_2022"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="10sp"
        android:textSize="11sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>